--- a/app/views/macro_template/new_form.html.erb
+++ b/app/views/macro_template/new_form.html.erb
@@ -5,7 +5,7 @@ Send us an image and/or a description of a meal and we'll ask AI to estimate how
 </div>
 
 <div>
-<form action = "/process_inputs" method = "post">
+<form action = "/process_inputs" method = "post" enctype ="multipart/form-data">
   <div>
   <label for="image_field">Image:</label>
     <input type ="file" id = "image_field" name = "image">
